--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>First code</title>
+  <link rel="stylesheet" href="./style.css"/>
 </head>
 <body>
-  <header> 
-    <h1>Первый проект</h1>
+  <header class="header"> 
+    <h1 class="header-title">Первый проект a</h1>
   </header>
-  <main>
+  <main class="main">
     <h2>Тестируем коммит HTML кода</h2>
   </main>
   
