--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>First code</title>
   <link rel="stylesheet" href="./style.css"/>
+  <link rel="stylesheet" href="./script.js">
 </head>
 <body>
   <header class="header"> 
@@ -12,6 +13,7 @@
   </header>
   <main class="main">
     <h2>Тестируем коммит HTML кода</h2>
+    <p>В этом уроке я научился создавать локальный и удаленный репозитории</p>
   </main>
   
 </body>
